2006-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	* flumotion/worker/checks/check.py:
	* flumotion/worker/checks/video010.py:
	* flumotion/worker/checks/video08.py:
	  add source of error message as first arg to
	  GStreamerGstError

2006-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/bundleclient.py:
	* flumotion/common/package.py:
	* flumotion/common/registry.py:
	* flumotion/common/setup.py:
	* flumotion/common/worker.py:
	* flumotion/component/base/__init__.py:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/admin_text.py:
	* flumotion/component/bouncers/__init__.py:
	* flumotion/service/service.py:
	  documentation updates

2006-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/manager/component.py:
	  make an overdue function name change:
	  removeKeycard -> removeKeycardId

2006-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/worker.py:
	  use a safer way of creating a worker socket.  Would be nice
	  if we could actually give the file to twisted, without needing
	  to delete.

2006-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/messages.py:
	  fix doc
	* flumotion/manager/manager.py:
	  privatize a bunch of privately used undocumented methods

2006-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/messages.py:
	  document

2006-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_pb.py:
	* flumotion/common/log.py:
	  document
	  private getTheFluLogObserver()

2006-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/planet.py:
	  remove 'message' from the jobstate
	* flumotion/component/component.py: